datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
  // previewFeatures = []
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  email     String   @unique
  password  String
  firstname String?
  lastname  String?
  lists     List[]
  role      Role
}

model List {
  id        String     @id @default(cuid())
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt
  name      String     @unique
  eventDate DateTime?
  description String?
  items     ListItem[]
  author    User?      @relation(fields: [authorId], references: [id])
  authorId  String
}

model ListItem {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  list    List?    @relation(fields: [listId], references: [id])
  listId  String
  name      String
  price     Int?
  url       String
  purchased Boolean
  notes     String?
}

enum Role {
  ADMIN
  USER
}
