//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  lists List [not null]
  role Role [not null]
}

Table List {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [unique, not null]
  eventDate DateTime
  description String
  items ListItem [not null]
  author User
  authorId String [not null]
}

Table ListItem {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  list List
  listId String [not null]
  name String [not null]
  price Int
  url String [not null]
  purchased Boolean [not null]
  notes String
}

Enum Role {
  ADMIN
  USER
}

Ref: List.authorId > User.id

Ref: ListItem.listId > List.id